# model-garden-topic-modelling

./: Makefile  README.md  pyproject.toml
src/: cloud_function.py  requirements.txt
terraform/: main.tf
